tests/lean/simplifier_canonize.lean.expected.out
simplifier_canonize.lean:2:0: warning: imported file uses 'sorry'
simplifier_canonize.lean:13:11:failed to generate bytecode for 'A_grp₂'
code generation failed, VM does not have code for 'A_grp₁'
simplifier_canonize.lean:14:11:failed to generate bytecode for 'A_grp₃'
code generation failed, VM does not have code for 'A_grp₁'
This should fail, since A_grp₂ is not unfolded, and it is not an instance arg
simplifier_canonize.lean:18:41: error: simp tactic failed to simplify
state:
⊢ f₁ A A_grp₁ = f₁ A A_grp₂
simplifier_canonize.lean:18:41: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
This should succeed, since A_grp₂ is an instance arg and gets canonized
simplifier_canonize.lean:21:41: error: exact tactic failed, type mismatch, given expression has type
  @f₂ A A_grp₁ = @f₂ A A_grp₁
but is expected to have type
  @f₂ A A_grp₁ = @f₂ A A_grp₂
state:
Htarget : @f₂ A A_grp₁ = @f₂ A A_grp₁
⊢ @f₂ A A_grp₁ = @f₂ A A_grp₂

⊢ @f₂ A A_grp₁ = @f₂ A A_grp₁
simplifier_canonize.lean:21:41: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
This should fail to simplify, since we do not reach a fixed point
simplifier_canonize.lean:24:51: error: exact tactic failed, type mismatch, given expression has type
  @f₂ A A_grp₁ = @f₂ A A_grp₁
but is expected to have type
  @f₂ A (A_grp₃ trivial) = @f₂ A A_grp₂
state:
Htarget : @f₂ A A_grp₁ = @f₂ A A_grp₁
⊢ @f₂ A (A_grp₃ trivial) = @f₂ A A_grp₂

⊢ @f₂ A A_grp₁ = @f₂ A A_grp₁
simplifier_canonize.lean:24:51: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
This should simplify, since we reach a fixed point
simplifier_canonize.lean:28:51: error: exact tactic failed, type mismatch, given expression has type
  @f₂ A A_grp₂ = @f₂ A A_grp₂
but is expected to have type
  @f₂ A (A_grp₃ trivial) = @f₂ A A_grp₂
state:
Htarget : @f₂ A A_grp₂ = @f₂ A A_grp₂
⊢ @f₂ A (A_grp₃ trivial) = @f₂ A A_grp₂

⊢ @f₂ A A_grp₂ = @f₂ A A_grp₂
simplifier_canonize.lean:28:51: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
